--- a/Tournaments.API/appsettings.json
+++ b/Tournaments.API/appsettings.json
@@ -3,6 +3,12 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=TournamentsDB;Username=postgres;Password=12345678"
   },
 
+  "Jwt": {
+    "Key": "266c48b4-e272-4e81-a077-2017509df123-266c48b4-e272-4e81-a077-2017509df123",
+    "Issuer": "http://localhost:5193",
+    "Audience": "http://localhost:5193"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
