--- a/Tournaments.API/Tournaments.API.csproj
+++ b/Tournaments.API/Tournaments.API.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\Tournaments.Persistence\Tournaments.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Middlewares\" />
+  </ItemGroup>
+
 </Project>
