Add middleware to handle exceptions.

--- a/Tournaments.API/Tournaments.API.csproj
+++ b/Tournaments.API/Tournaments.API.csproj
@@ -16,16 +16,14 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="ReHackt.Extensions.Options.Validation" Version="8.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Tournaments.Application\Tournaments.Application.csproj" />
     <ProjectReference Include="..\Tournaments.Persistence\Tournaments.Persistence.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Middlewares\" />
   </ItemGroup>
 
 </Project>
