Add serilog configuration.

--- a/Tournaments.API/appsettings.json
+++ b/Tournaments.API/appsettings.json
@@ -9,6 +9,49 @@
     "Audience": "http://localhost:5193"
   },
 
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "/logs/common-.txt",
+          "rollOnFileSizeLimit": true,
+          "rollingInterval": "Day"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "/logs/warning-.txt",
+          "restrictedToMinimumLevel": "Warning",
+          "restrictedToMaximumLevel": "Warning",
+          "rollingInterval": "Day"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "/logs/error-.txt",
+          "restrictedToMinimumLevel": "Error",
+          "restrictedToMaximumLevel": "Error",
+          "rollingInterval": "Day"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithThreadId", "WithMachineName" ]
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
