--- a/Tournaments.API/Tournaments.API.csproj
+++ b/Tournaments.API/Tournaments.API.csproj
@@ -18,6 +18,7 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="ReHackt.Extensions.Options.Validation" Version="8.0.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
