--- a/Tournaments.API/appsettings.json
+++ b/Tournaments.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=TournamentsDB;Username=postgres;Password=12345678"
+    "DefaultConnection": "Host=pg_db;Port=5432;Database=TournamentsDB;Username=postgres;Password=12345678"
   },
 
   "JwtOptions": {
